--- a/术语翻译汇总.md
+++ b/术语翻译汇总.md
@@ -1,105 +1,125 @@
+#术语汇总
 
-| Term                                             | 中文翻译          | Issue | 状态 | Example                                                                                                                                                                                                                                                               |
-|--------------------------------------------------|-------------------|--------------|------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Adequatism.                                      |                   |[Issue2]| <font color=red face="黑体">待定</font> | The goal of ontology as viewed by the proponent of adequatism is to do justice to the vast array <br> of different kinds of entities that exist in the world, rather than ignoring these or those  <br>specific kinds of entities or attempting to explain them away. |
+<style type="text/css">
+	table.tableizer-table {
+		font-size: 12px;
+		border: 1px solid #CCC; 
+		font-family: Arial, Helvetica, sans-serif;
+	} 
+	.tableizer-table td {
+		padding: 4px;
+		margin: 3px;
+		border: 1px solid #CCC;
+	}
+	.tableizer-table th {
+		background-color: #104E8B; 
+		color: #FFF;
+		font-weight: bold;
+	}
+</style>
 
+<table class="tableizer-table">
+<thead><tr class="tableizer-firstrow"><th>Index</th><th>Issue</th><th>术语</th><th>中文翻译</th><th> 备注</th><th>状态</th></tr></thead><tbody>
+ <tr><td>1</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/2'>Issue 2</a></td><td>artifact</td><td>工件</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>2</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/3'>Issue 3</a></td><td>aboutness</td><td>关涉性</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>3</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/4'>Issue 4</a></td><td>Adequatism</td><td>适当主义</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>4</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/5'>Issue 5</a></td><td>adequatist</td><td>适当主义者</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>5</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/6'>Issue 6</a></td><td>assertion</td><td>断言</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>6</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/7'>Issue 7</a></td><td>class</td><td>类</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>7</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/8'>Issue 8</a></td><td>containment</td><td>容器</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>8</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/9'>Issue 9</a></td><td>Convention</td><td>规范</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>9</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/10'>Issue 10</a></td><td>data wrangling</td><td>数据清洗</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>10</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/11'>Issue 11</a></td><td>Primitive Classe</td><td>基元类</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>11</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/11'>Issue 11</a></td><td>Defined Classes </td><td>定义类</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>12</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/12'>Issue 12</a></td><td>disorder</td><td>紊乱&失调&障碍</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/94'>同 Issue 94</a></td><td><font color="red">未解决</font></td></tr>
+ <tr><td>13</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/13'>Issue 13</a></td><td>Epistemological idealism</td><td>认识论的唯心主义</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>14</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/14'>Issue 14</a></td><td>Exhaustiveness</td><td>广谱性</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>15</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/15'>Issue 15</a></td><td>fallibilism</td><td>可误论</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>16</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/16'>Issue 16</a></td><td>foundational relation</td><td>基础关系</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>17</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/17'>Issue 17</a></td><td>has_participant</td><td>有参与者</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>18</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/18'>Issue 18</a></td><td>hierarchy</td><td>层级结构</td><td>层次结构？分层结构？</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>19</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/19'>Issue 19</a></td><td>identity</td><td>同一性</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>20</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/20'>Issue 20</a></td><td>Information Artifact Ontology</td><td>信息工件本体</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>21</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/21'>Issue 21</a></td><td>instantiates</td><td>实例化</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>22</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/22'>Issue 22</a></td><td>integral_occurrent_part</td><td>必需常体部件</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>23</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/23'>Issue 23</a></td><td>Reciprocity & reciprocal</td><td>对等</td><td>互惠？互换？</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>24</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/24'>Issue 24</a></td><td>Living subject</td><td>生命主体</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>25</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/25'>Issue 25</a></td><td>Low-Hanging Fruit & low-hanging fruit pirinciple</td><td>低果先摘</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>26</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/26'>Issue 26</a></td><td>mass nouns</td><td>不可数名词</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>27</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/27'>Issue 27</a></td><td>metaphysical nominalism</td><td>形而上学唯名论</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>28</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/28'>Issue 28</a></td><td>negative terms</td><td>否定术语</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>29</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/29'>Issue 29</a></td><td>Novum Organum</td><td>&nbsp;</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>30</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/30'>Issue 30</a></td><td>OBO Foundry</td><td>OBO工场</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>31</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/31'>Issue 31</a></td><td>Obstacles to Accessibility</td><td>可达性的障碍</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>32</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/32'>Issue 32</a></td><td>organon</td><td>工具论</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>33</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/33'>Issue 33</a></td><td>particulars</td><td>殊相</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>34</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/34'>Issue 34</a></td><td>Performed activity</td><td>执行活动</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>35</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/35'>Issue 35</a></td><td>perspectivalism</td><td>观相主义</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>36</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/36'>Issue 36</a></td><td>Perspective</td><td>视角</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>37</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/37'>Issue 37</a></td><td>positive term</td><td>肯定术语</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>38</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/38'>Issue 38</a></td><td>preceded_by</td><td>之后</td><td>在...之后</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>39</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/39'>Issue 39</a></td><td>preferred terms</td><td>首选术语</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>40</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/40'>Issue 40</a></td><td>proper_continuant_part_of</td><td>真常体部件</td><td>...的真常体部件</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>41</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/40'>Issue 40</a></td><td>proper_occurrent_part_of</td><td>真行体部件</td><td>...的真行体部件</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>42</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/41'>Issue 41</a></td><td>property</td><td>属性</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>43</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/42'>Issue 42</a></td><td>RDF Schema </td><td>RDF Schema </td><td>不翻译</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>44</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/43'>Issue 43</a></td><td>reference or aboutness</td><td>指称</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>45</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/44'>Issue 44</a></td><td>reference frame & Frames of Reference</td><td>参照系</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>46</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/45'>Issue 45</a></td><td>reference ontology</td><td>参考本体</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>47</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/46'>Issue 46</a></td><td>referent</td><td>所指物</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>48</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/47'>Issue 47</a></td><td>regimentation</td><td>整编</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>49</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/48'>Issue 48</a></td><td>entities and relationships</td><td>实体和关系</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>50</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/49'>Issue 49</a></td><td>knowledge representation</td><td>知识表示</td><td>知识表达</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>51</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/50'>Issue 50</a></td><td>representation </td><td>表征/表象</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>52</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/51'>Issue 51</a></td><td>representational artifact</td><td>表述性工件</td><td>表征性工件</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>53</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/52'>Issue 52</a></td><td>representational units and composite representations</td><td>表述单元和复合表述</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>54</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/53'>Issue 53</a></td><td>singular noun rule</td><td>单数名词规则</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>55</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/54'>Issue 54</a></td><td>taxonomy</td><td>专业分类表 & 分类表</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>56</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/54'>Issue 54</a></td><td>classification & taxonomic classification</td><td>分类法 & 分类</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>57</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/55'>Issue 55</a></td><td>term</td><td>术语</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>58</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/56'>Issue 56</a></td><td>terminology</td><td>术语集</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>59</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/57'>Issue 57</a></td><td>The All-Some Rule</td><td>所有-某些原则</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>60</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/58'>Issue 58</a></td><td>the Biomedical Research Integrated Domain Group (BRIDG) model</td><td>生物医学研究集成领域组(BRIDG)模型</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>61</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/59'>Issue 59</a></td><td>The Ontology for General Medical Science, OGMS</td><td>普通医学本体</td><td>基础医学本体？</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>62</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/60'>Issue 60</a></td><td>Tower of Babel</td><td>巴别塔问题</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>63</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/61'>Issue 61</a></td><td>Triplestore</td><td>三元组仓库</td><td>三元组数据库？</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>64</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/62'>Issue 62</a></td><td>universal</td><td>共相</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>65</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/63'>Issue 63</a></td><td>univocity</td><td>单义性</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>66</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/64'>Issue 64</a></td><td>Use-Mention</td><td>使用与提述</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>67</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/65'>Issue 65</a></td><td>realism</td><td>实在论</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>68</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/66'>Issue 66</a></td><td>reality</td><td>现实 & 客观现实</td><td>实在？？</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>69</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/67'>Issue 67</a></td><td>computer usable language</td><td>计算机可执行语言</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>70</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/68'>Issue 68</a></td><td>Foundational Model of Anatomy</td><td>解剖学基础模型</td><td>Foundational Model of Anatomy, FMA</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>71</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/69'>Issue 69</a></td><td>accessibility</td><td>可达性</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>72</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/69'>Issue 69</a></td><td>usability</td><td>易用性</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>73</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/70'>Issue 70</a></td><td>domain neutral</td><td>领域中立</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>74</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/71'>Issue 71</a></td><td>Emergence</td><td>涌现</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>75</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/72'>Issue 72</a></td><td>primitive relationship</td><td>基元关系</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>76</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/73'>Issue 73</a></td><td>instant</td><td>瞬时 & 时刻 & 瞬间</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>77</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/74'>Issue 74</a></td><td>inhere & inherence</td><td>寓于</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>78</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/75'>Issue 75</a></td><td>derives_from</td><td>衍生自</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>79</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/76'>Issue 76</a></td><td>imply & implication</td><td>蕴涵</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>80</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/77'>Issue 77</a></td><td>instance-level</td><td>实例级</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>81</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/78'>Issue 78</a></td><td>Region Connection Calculus</td><td>区域连接演算</td><td>Region Connection Calculus (RCC)</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>82</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/79'>Issue 79</a></td><td>原书勘误</td><td>&nbsp;</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>83</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/96'>Issue 96</a></td><td>parthood</td><td>部件关系</td><td>部分关系？</td><td><font color="red"></font></td></tr>
+ <tr><td>84</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/96'>Issue 96</a></td><td>part</td><td>部件</td><td>部分 or 部件？</td><td><font color="red"></font></td></tr>
+ <tr><td>85</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/80'>Issue 80</a></td><td>integral （parthood）</td><td>&nbsp;</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>86</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/81'>Issue 81</a></td><td>relata </td><td>关系项</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>87</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/82'>Issue 82</a></td><td>Weak supplementation</td><td>弱补充</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>88</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/83'>Issue 83</a></td><td>ontology</td><td>本体/本体论</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>89</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/84'>Issue 84</a></td><td>Mental Functioning Ontology</td><td>心理机能本体</td><td>心理功能本体？精神功能本体？</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>90</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/85'>Issue 85</a></td><td>Unique product</td><td>唯一积</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>91</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/86'>Issue 86</a></td><td>category</td><td>范畴</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>92</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/87'>Issue 87</a></td><td>minimum information to reference an external ontology term</td><td>外部本体术语引用最小信息原则</td><td>MIREOT </td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>93</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/88'>Issue 88</a></td><td>Representationalism</td><td>表征主义</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>94</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/89'>Issue 89</a></td><td>causally unified</td><td>&nbsp;</td><td>&nbsp;</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>95</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/90'>Issue 90</a></td><td>Descriptive Ontology for Linguistic and Cognitive Engineering</td><td>语言学和认知工程描述本体</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>96</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/90'>Issue 90</a></td><td>Standard Upper Merged Ontology</td><td>标准上层合并本体</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>97</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/91'>Issue 91</a></td><td>PhilPaper</td><td>PhilPaper</td><td>专有名词，可以不翻译</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>98</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/92'>Issue 92</a></td><td>nonskeptical realism</td><td>非怀疑论的实在论</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>99</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/93'>Issue 93</a></td><td>mental representations</td><td>心理表征</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+ <tr><td>100</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/94'>Issue 94</a></td><td>disorder</td><td>失调</td><td>紊乱/障碍</td><td><font color="red">未解决</font></td></tr>
+ <tr><td>101</td><td><a href='https://github.com/biomedontology/TermChinesetranslation/issues/95'>Issue 95</a></td><td>Basic Formal Ontology</td><td>基本形式化本体</td><td>&nbsp;</td><td><font color="lightgreen">解决</font></td></tr>
+</tbody></table>
 
-
-
-
-
-*******************
-[Issue2]:https://github.com/biomedontology/TermChinesetranslation/issues/2
-[Issue3]:https://github.com/biomedontology/TermChinesetranslation/issues/3
-[Issue4]:https://github.com/biomedontology/TermChinesetranslation/issues/4
-[Issue5]:https://github.com/biomedontology/TermChinesetranslation/issues/5
-[Issue6]:https://github.com/biomedontology/TermChinesetranslation/issues/6
-[Issue7]:https://github.com/biomedontology/TermChinesetranslation/issues/7
-[Issue8]:https://github.com/biomedontology/TermChinesetranslation/issues/8
-[Issue9]:https://github.com/biomedontology/TermChinesetranslation/issues/9
-[Issue10]:https://github.com/biomedontology/TermChinesetranslation/issues/10
-[Issue11]:https://github.com/biomedontology/TermChinesetranslation/issues/11
-[Issue12]:https://github.com/biomedontology/TermChinesetranslation/issues/12
-[Issue13]:https://github.com/biomedontology/TermChinesetranslation/issues/13
-[Issue14]:https://github.com/biomedontology/TermChinesetranslation/issues/14
-[Issue15]:https://github.com/biomedontology/TermChinesetranslation/issues/15
-[Issue16]:https://github.com/biomedontology/TermChinesetranslation/issues/16
-[Issue17]:https://github.com/biomedontology/TermChinesetranslation/issues/17
-[Issue18]:https://github.com/biomedontology/TermChinesetranslation/issues/18
-[Issue19]:https://github.com/biomedontology/TermChinesetranslation/issues/19
-[Issue20]:https://github.com/biomedontology/TermChinesetranslation/issues/20
-[Issue21]:https://github.com/biomedontology/TermChinesetranslation/issues/21
-[Issue22]:https://github.com/biomedontology/TermChinesetranslation/issues/22
-[Issue23]:https://github.com/biomedontology/TermChinesetranslation/issues/23
-[Issue24]:https://github.com/biomedontology/TermChinesetranslation/issues/24
-[Issue25]:https://github.com/biomedontology/TermChinesetranslation/issues/25
-[Issue26]:https://github.com/biomedontology/TermChinesetranslation/issues/26
-[Issue27]:https://github.com/biomedontology/TermChinesetranslation/issues/27
-[Issue28]:https://github.com/biomedontology/TermChinesetranslation/issues/28
-[Issue29]:https://github.com/biomedontology/TermChinesetranslation/issues/29
-[Issue30]:https://github.com/biomedontology/TermChinesetranslation/issues/30
-[Issue31]:https://github.com/biomedontology/TermChinesetranslation/issues/31
-[Issue32]:https://github.com/biomedontology/TermChinesetranslation/issues/32
-[Issue33]:https://github.com/biomedontology/TermChinesetranslation/issues/33
-[Issue34]:https://github.com/biomedontology/TermChinesetranslation/issues/34
-[Issue35]:https://github.com/biomedontology/TermChinesetranslation/issues/35
-[Issue36]:https://github.com/biomedontology/TermChinesetranslation/issues/36
-[Issue37]:https://github.com/biomedontology/TermChinesetranslation/issues/37
-[Issue38]:https://github.com/biomedontology/TermChinesetranslation/issues/38
-[Issue39]:https://github.com/biomedontology/TermChinesetranslation/issues/39
-[Issue40]:https://github.com/biomedontology/TermChinesetranslation/issues/40
-[Issue41]:https://github.com/biomedontology/TermChinesetranslation/issues/41
-[Issue42]:https://github.com/biomedontology/TermChinesetranslation/issues/42
-[Issue43]:https://github.com/biomedontology/TermChinesetranslation/issues/43
-[Issue44]:https://github.com/biomedontology/TermChinesetranslation/issues/44
-[Issue45]:https://github.com/biomedontology/TermChinesetranslation/issues/45
-[Issue46]:https://github.com/biomedontology/TermChinesetranslation/issues/46
-[Issue47]:https://github.com/biomedontology/TermChinesetranslation/issues/47
-[Issue48]:https://github.com/biomedontology/TermChinesetranslation/issues/48
-[Issue49]:https://github.com/biomedontology/TermChinesetranslation/issues/49
-[Issue50]:https://github.com/biomedontology/TermChinesetranslation/issues/50
-[Issue51]:https://github.com/biomedontology/TermChinesetranslation/issues/51
-[Issue52]:https://github.com/biomedontology/TermChinesetranslation/issues/52
-[Issue53]:https://github.com/biomedontology/TermChinesetranslation/issues/53
-[Issue54]:https://github.com/biomedontology/TermChinesetranslation/issues/54
-[Issue55]:https://github.com/biomedontology/TermChinesetranslation/issues/55
-[Issue56]:https://github.com/biomedontology/TermChinesetranslation/issues/56
-[Issue57]:https://github.com/biomedontology/TermChinesetranslation/issues/57
-[Issue58]:https://github.com/biomedontology/TermChinesetranslation/issues/58
-[Issue59]:https://github.com/biomedontology/TermChinesetranslation/issues/59
-[Issue60]:https://github.com/biomedontology/TermChinesetranslation/issues/60
-[Issue61]:https://github.com/biomedontology/TermChinesetranslation/issues/61
-[Issue62]:https://github.com/biomedontology/TermChinesetranslation/issues/62
-[Issue63]:https://github.com/biomedontology/TermChinesetranslation/issues/63
-[Issue64]:https://github.com/biomedontology/TermChinesetranslation/issues/64
-[Issue65]:https://github.com/biomedontology/TermChinesetranslation/issues/65
-[Issue66]:https://github.com/biomedontology/TermChinesetranslation/issues/66
-[Issue67]:https://github.com/biomedontology/TermChinesetranslation/issues/67
-[Issue68]:https://github.com/biomedontology/TermChinesetranslation/issues/68
-[Issue69]:https://github.com/biomedontology/TermChinesetranslation/issues/69
-[Issue70]:https://github.com/biomedontology/TermChinesetranslation/issues/70
-[Issue71]:https://github.com/biomedontology/TermChinesetranslation/issues/71
-[Issue72]:https://github.com/biomedontology/TermChinesetranslation/issues/72
-[Issue73]:https://github.com/biomedontology/TermChinesetranslation/issues/73
-[Issue74]:https://github.com/biomedontology/TermChinesetranslation/issues/74
-[Issue75]:https://github.com/biomedontology/TermChinesetranslation/issues/75
-[Issue76]:https://github.com/biomedontology/TermChinesetranslation/issues/76
-[Issue77]:https://github.com/biomedontology/TermChinesetranslation/issues/77
-[Issue78]:https://github.com/biomedontology/TermChinesetranslation/issues/78
-[Issue79]:https://github.com/biomedontology/TermChinesetranslation/issues/79
-[Issue80]:https://github.com/biomedontology/TermChinesetranslation/issues/80
-[Issue81]:https://github.com/biomedontology/TermChinesetranslation/issues/81
-[Issue82]:https://github.com/biomedontology/TermChinesetranslation/issues/82
-[Issue83]:https://github.com/biomedontology/TermChinesetranslation/issues/83
-[Issue84]:https://github.com/biomedontology/TermChinesetranslation/issues/84
-[Issue85]:https://github.com/biomedontology/TermChinesetranslation/issues/85
-[Issue86]:https://github.com/biomedontology/TermChinesetranslation/issues/86
-[Issue87]:https://github.com/biomedontology/TermChinesetranslation/issues/87
-[Issue88]:https://github.com/biomedontology/TermChinesetranslation/issues/88
-[Issue89]:https://github.com/biomedontology/TermChinesetranslation/issues/89
-[Issue90]:https://github.com/biomedontology/TermChinesetranslation/issues/90
-[Issue91]:https://github.com/biomedontology/TermChinesetranslation/issues/91
-[Issue92]:https://github.com/biomedontology/TermChinesetranslation/issues/92
-[Issue93]:https://github.com/biomedontology/TermChinesetranslation/issues/93
-[Issue94]:https://github.com/biomedontology/TermChinesetranslation/issues/94
-[Issue95]:https://github.com/biomedontology/TermChinesetranslation/issues/95
